Implemented the ability to add/view/update task to the DB from the app

--- a/images.qrc
+++ b/images.qrc
@@ -25,5 +25,6 @@
         <file>images/backToView.png</file>
         <file>images/add.png</file>
         <file>images/remove.png</file>
+        <file>images/addTask.png</file>
     </qresource>
 </RCC>
