--- a/ListTasks.ui
+++ b/ListTasks.ui
@@ -90,7 +90,7 @@ QPushButton:pressed {
          </size>
         </property>
         <property name="toolTip">
-         <string>Добавить клиента</string>
+         <string>Добавить задание</string>
         </property>
         <property name="statusTip">
          <string/>
@@ -120,8 +120,8 @@ QPushButton:pressed {
         </property>
         <property name="iconSize">
          <size>
-          <width>33</width>
-          <height>33</height>
+          <width>34</width>
+          <height>34</height>
          </size>
         </property>
        </widget>
