--- a/ViewEmployee.ui
+++ b/ViewEmployee.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>558</width>
-    <height>162</height>
+    <height>174</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -21,6 +21,9 @@
        <width>40</width>
        <height>40</height>
       </size>
+     </property>
+     <property name="toolTip">
+      <string>Редактировать информацию</string>
      </property>
      <property name="styleSheet">
       <string notr="true">QPushButton {
