--- a/ViewEmployee.ui
+++ b/ViewEmployee.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>571</width>
-    <height>181</height>
+    <height>178</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -71,7 +71,7 @@ QPushButton:pressed {
    </item>
    <item row="1" column="0" colspan="2">
     <layout class="QGridLayout" name="gridLayout">
-     <item row="0" column="3" colspan="2">
+     <item row="0" column="4" colspan="2">
       <widget class="QLabel" name="label_2">
        <property name="font">
         <font>
@@ -83,7 +83,7 @@ QPushButton:pressed {
        </property>
       </widget>
      </item>
-     <item row="1" column="0" colspan="3">
+     <item row="1" column="1" colspan="3">
       <widget class="QLineEdit" name="workerFMLname">
        <property name="minimumSize">
         <size>
@@ -112,30 +112,7 @@ QPushButton:pressed {
        </property>
       </widget>
      </item>
-     <item row="3" column="0" colspan="3">
-      <widget class="QLineEdit" name="serviceNumber">
-       <property name="font">
-        <font>
-         <pointsize>10</pointsize>
-        </font>
-       </property>
-       <property name="styleSheet">
-        <string notr="true">QLineEdit {
-	border: 1px solid gray;
-    border-radius: 7px;
-    background-color: #dbdcf7;
-	padding-left: 3px;
-}</string>
-       </property>
-       <property name="frame">
-        <bool>true</bool>
-       </property>
-       <property name="readOnly">
-        <bool>true</bool>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="3" colspan="2">
+     <item row="1" column="4" colspan="2">
       <widget class="QLineEdit" name="workerPosition">
        <property name="minimumSize">
         <size>
@@ -164,7 +141,19 @@ QPushButton:pressed {
        </property>
       </widget>
      </item>
-     <item row="2" column="3" colspan="2">
+     <item row="0" column="1" colspan="3">
+      <widget class="QLabel" name="label">
+       <property name="font">
+        <font>
+         <pointsize>9</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>ФИО сотрудника</string>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="1" rowspan="2" colspan="3">
       <widget class="QLabel" name="label_3">
        <property name="font">
         <font>
@@ -176,7 +165,7 @@ QPushButton:pressed {
        </property>
       </widget>
      </item>
-     <item row="3" column="3" colspan="2">
+     <item row="4" column="1" rowspan="2" colspan="3">
       <widget class="QLineEdit" name="hourlyPayment">
        <property name="font">
         <font>
@@ -199,19 +188,30 @@ QPushButton:pressed {
        </property>
       </widget>
      </item>
-     <item row="0" column="0" colspan="3">
-      <widget class="QLabel" name="label">
+     <item row="4" column="4" rowspan="2" colspan="2">
+      <widget class="QLineEdit" name="serviceNumber">
        <property name="font">
         <font>
-         <pointsize>9</pointsize>
+         <pointsize>10</pointsize>
         </font>
        </property>
-       <property name="text">
-        <string>ФИО сотрудника</string>
+       <property name="styleSheet">
+        <string notr="true">QLineEdit {
+	border: 1px solid gray;
+    border-radius: 7px;
+    background-color: #dbdcf7;
+	padding-left: 3px;
+}</string>
+       </property>
+       <property name="frame">
+        <bool>true</bool>
+       </property>
+       <property name="readOnly">
+        <bool>true</bool>
        </property>
       </widget>
      </item>
-     <item row="2" column="0" colspan="3">
+     <item row="2" column="4" rowspan="2" colspan="2">
       <widget class="QLabel" name="label_4">
        <property name="font">
         <font>
