--- a/AddTask.ui
+++ b/AddTask.ui
@@ -87,7 +87,7 @@
       </widget>
      </item>
      <item row="0" column="2">
-      <widget class="QLabel" name="dateErrorLabel">
+      <widget class="QLabel" name="errorLabel">
        <property name="font">
         <font>
          <pointsize>9</pointsize>
@@ -99,7 +99,7 @@
 }</string>
        </property>
        <property name="text">
-        <string>Дата и (или) время отсутствуют!</string>
+        <string>Все поля обязательны к заполнению!</string>
        </property>
       </widget>
      </item>
@@ -151,7 +151,7 @@
    </item>
    <item row="1" column="0">
     <layout class="QGridLayout" name="gridLayout_2">
-     <item row="2" column="3">
+     <item row="1" column="2">
       <widget class="QPushButton" name="createTaskButton">
        <property name="minimumSize">
         <size>
@@ -196,43 +196,7 @@ QPushButton:pressed {
        </property>
       </widget>
      </item>
-     <item row="0" column="1" colspan="3">
-      <widget class="QLabel" name="contentErrorLabel">
-       <property name="minimumSize">
-        <size>
-         <width>0</width>
-         <height>20</height>
-        </size>
-       </property>
-       <property name="font">
-        <font>
-         <pointsize>9</pointsize>
-        </font>
-       </property>
-       <property name="styleSheet">
-        <string notr="true">QLabel {
-	color: red;
-}</string>
-       </property>
-       <property name="text">
-        <string>Поле ввода задания не должно быть пустым!</string>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="0">
-      <spacer name="horizontalSpacer_4">
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>40</width>
-         <height>20</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-     <item row="1" column="0" colspan="4">
+     <item row="0" column="0" colspan="3">
       <widget class="QTextEdit" name="contentLine">
        <property name="minimumSize">
         <size>
@@ -258,7 +222,7 @@ QPushButton:pressed {
        </property>
       </widget>
      </item>
-     <item row="2" column="0" colspan="3">
+     <item row="1" column="0" colspan="2">
       <spacer name="horizontalSpacer_2">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
