--- a/ViewClient.ui
+++ b/ViewClient.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>658</width>
-    <height>174</height>
+    <width>925</width>
+    <height>178</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -96,6 +96,11 @@ QPushButton:pressed {
      </item>
      <item row="2" column="3">
       <widget class="QLabel" name="label_6">
+       <property name="font">
+        <font>
+         <pointsize>9</pointsize>
+        </font>
+       </property>
        <property name="text">
         <string>VIN-номер</string>
        </property>
@@ -130,6 +135,11 @@ QPushButton:pressed {
      </item>
      <item row="0" column="2" colspan="2">
       <widget class="QLabel" name="label_2">
+       <property name="font">
+        <font>
+         <pointsize>9</pointsize>
+        </font>
+       </property>
        <property name="text">
         <string>Контакты</string>
        </property>
@@ -137,6 +147,11 @@ QPushButton:pressed {
      </item>
      <item row="2" column="2">
       <widget class="QLabel" name="label_5">
+       <property name="font">
+        <font>
+         <pointsize>9</pointsize>
+        </font>
+       </property>
        <property name="text">
         <string>Год выпуска</string>
        </property>
@@ -164,6 +179,11 @@ QPushButton:pressed {
      </item>
      <item row="2" column="0">
       <widget class="QLabel" name="label_3">
+       <property name="font">
+        <font>
+         <pointsize>9</pointsize>
+        </font>
+       </property>
        <property name="text">
         <string>Модель авто</string>
        </property>
@@ -211,6 +231,11 @@ QPushButton:pressed {
      </item>
      <item row="0" column="0" colspan="2">
       <widget class="QLabel" name="label">
+       <property name="font">
+        <font>
+         <pointsize>9</pointsize>
+        </font>
+       </property>
        <property name="text">
         <string>ФИО клиента</string>
        </property>
